# itspl-task

./: .gitattributes  .gitignore  ITSPL-Task.postman_collection.json  README.md  pyproject.toml
src/pages/: base_page.py  log_in.py
src/util/admin/: admin_api.py  bearer_auth.py
tests/: conftest.py
tests/api/: conftest.py  test_cases.py  test_cases_user.py
tests/api/contact/: conftest.py  test_api_contact.py  test_cases_contact.py
tests/api/user/: conftest.py  test_api_user.py
tests/ui/: conftest.py  test_log_in.py  test_sample.py  test_sign_up.py
tests/ui/pages/: base_page.py  log_in.py  sign_up.py
